# AiClient

AiClient/: .qmlls.ini  CMakeLists.txt  GlobalProperties.qml  InputMessage.qml  LoadingIndicator.qml  Main.qml  SystemMessageItem.qml  UserMessageItem.qml  aiclient.cpp  aiclient.h  main.cpp  res.qrc
AiClient/Quick/: QuickFramelessWindow.cpp  QuickFramelessWindow.h
AiClient/Quick/private/: QuickFramelessWindowPrivate.cpp
